fix(bus-shuttle-services): details icon on iOS

--- a/src/app/pages/bus-shuttle-services/bus-shuttle-services.page.scss
+++ b/src/app/pages/bus-shuttle-services/bus-shuttle-services.page.scss
@@ -56,3 +56,7 @@
     border-right: solid 1.5px;
   }
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
